Fixed DCS aura bug

--- a/Juggernaut Rework/localisation/english/jrw_l_english.yml
+++ b/Juggernaut Rework/localisation/english/jrw_l_english.yml
@@ -14,3 +14,14 @@
  JUGGERNAUT_ARCHAEO_TITAN_BEAM_DESC: "$tech_archaeo_titan_beam_tech$"
  JUGGERNAUT_ARCHAEO_TITAN: "$tech_archaeo_titan_beam$"
  JUGGERNAUT_ARCHAEO_TITAN_DESC: "$tech_archaeo_titan_beam_tech$"
+ 
+ SHIP_AURA_STRIKE_CRAFT_JRW: "$SHIP_AURA_STRIKE_CRAFT$"
+ SHIP_AURA_RANGE_JRW: "$SHIP_AURA_RANGE$"
+ SHIP_AURA_HYPERLANE_JRW: "$SHIP_AURA_HYPERLANE$"
+ SHIP_AURA_PD_PENETRATION_JRW: "$SHIP_AURA_PD_PENETRATION$"
+ SHIP_AURA_BOMBARDMENT_JRW: "$SHIP_AURA_BOMBARDMENT$"
+ SHIP_AURA_STRIKE_CRAFT_JRW_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_RANGE_JRW_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_HYPERLANE_JRW_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_PD_PENETRATION_JRW_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_BOMBARDMENT_JRW_DESC: "$ship_aura_components_DESC$"
