--- a/Rose Tweaks/localisation/english/rose_choose_starting_ruler_ethic_l_english.yml
+++ b/Rose Tweaks/localisation/english/rose_choose_starting_ruler_ethic_l_english.yml
@@ -6,4 +6,6 @@
  rose_choose_starting_ruler_ethic.2.b: "Focus on how we balance science and belief."
  rose_choose_starting_ruler_ethic.2.c: "Focus on how we treat our citizens."
  rose_choose_starting_ruler_ethic.2.d: "Focus on how we view other lifeforms."
+ rose_choose_starting_ruler_ethic.2.e: "Focus on how we conserve or exploit nature."
+ rose_choose_starting_ruler_ethic.2.f: "Focus on how we manage our economy."
  
